[package]
name = "rocket-basicauth"
description = "A high-level basic access authentication request guard for Rocket.rs"
version = "2.1.1"
readme = "README.md"
license = "MIT"
repository = "https://github.com/owez/rocket-basicauth"
keywords = ["web", "rocket", "auth", "basic-auth", "authentication"]
authors = ["Owez <root@ogriffiths.com>"]
edition = "2018"

[dependencies]
base64 = "0.13"
rocket = { version = "0.5.0-rc.1", git = "https://github.com/SergioBenitez/Rocket/" }
log = { version = "0.4", optional = true }

[features]
default = ["log"]
